# aklatan

./: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  some.txt
.github/workflows/: ci.yml  docker-image.yml
src/: main.py
src/api/routes/: authors.py  books.py  recommenders.py  router.py
src/auth/: dependencies.py  models.py  routes.py  services.py  utils.py
src/config/: constants.py  settings.py
src/core/: limiter.py  log.py
src/crud/: authors.py  books.py  recommenders.py
src/database/: session.py  tables.py
src/exceptions/: exceptions.py
src/models/: __init__.py  author.py  book.py  recommender.py
src/schemas/: __init__.py  author.py  book.py  recommender.py
tests/: conftest.py  test_main.py
tests/api/routes/: conftest.py  test_authors_routes.py  test_books_routes.py  test_recommenders_routes.py
tests/auth/: conftest.py  test_dependencies.py  test_routes.py  test_services.py  test_utils.py
tests/crud/: conftest.py  test_authors_crud.py  test_books_crud.py  test_recommenders_crud.py
tests/database/: test_session.py  test_tables.py
